--- a/index.html
+++ b/index.html
@@ -853,6 +853,7 @@
             <div class="form-group">
                 <label for="image">Attach Image</label>
                 <input type="file" id="image" name="image" accept="image/*">
+                <button type="button" id="removeQRBtn" style="margin-left:10px; background:#ef4444; color:#fff; display:none;">Remove QR</button>
                 <div id="imagePreview" style="margin-top:10px;"></div>
             </div>
             <button type="button" id="generateQR" style="margin-bottom: 12px; background: #22c55e; color: #fff;">Generate QR Code</button>
